wp-content/themes/salefish/assets/scss/basics/_general.scss
img,
svg {
  image-rendering: -o-crisp-edges;
  image-rendering: -webkit-optimize-contrast;
  -ms-interpolation-mode: nearest-neighbor;
}

input {
  -webkit-appearance: none;
  border-radius: 0;
}

h1 {
  font-family: $PB;
  font-size: 4em;
  line-height: 1.1;

  @include rs550 {
    font-size: 2.5em;
  }
}

h2 {
  font-family: $PB;
  font-size: 3.75em;
  line-height: 1.2;

  @include rs550 {
    font-size: 2.2em;
  }
}

h3 {
  font-family: $PSB;
  font-size: 1.05em;
  line-height: 1.5;

  @include rs550 {
    font-size: 1.1em;
  }
}

p {
  font-family: $PL;
  font-size: 1.75em;
  line-height: 1.5;

  @include rs550 {
    font-size: 1.6em;
  }
}

body {
  color: $black;
  overflow-x: hidden;
  // max-width: 1800px;
  // margin: 0 auto;
  position: relative;
}
.max_wrapper {
  max-width: 1800px;
  margin: 0 auto;
}
main {
  overflow-x: hidden;
}

.loading {
  position: fixed;
  top: 0;
  width: 100%;
  height: 100%;
  background: $dark_purple;
  transition: 500ms all ease-in-out;
  z-index: 9999;
  opacity: 1;
  visibility: visible;
  &.active {
    opacity: 0;
    visibility: hidden;
  }
}

